--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.11.1",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.6.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-bootstrap": "^1.5.0",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
