--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@googlemaps/js-api-loader": "^1.11.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "mongoose": "^5.11.18",
     "react": "^16.5.2",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^16.5.2",
