--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "install-client": "cd src/client && npm install",
-    "heroku-postbuild": "webpack -p", // runs after installation
-    "start": "node src/server/index.js",
+    "heroku-postbuild": "webpack -p", 
+    "start": "npm run build && node src/server/index.js",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
